# mymemo

./: pyproject.toml
memo/: controllers.py  database.py  dependencies.py  main.py  models.py  schemas.py
memo/templates/: home.html  memos.html
